templates/core_template.yaml
---
# Source: core/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-core
  labels:
    helm.sh/chart: core-0.10.0
    app.kubernetes.io/name: core
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: core
    app.kubernetes.io/instance: release-name
---
# Source: core/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-core
  labels:
    helm.sh/chart: core-0.10.0
    app.kubernetes.io/name: core
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: core
      app.kubernetes.io/instance: release-name
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: core
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-core
      securityContext:
        {}
      containers:
        - name: core
          securityContext:
            {}
          image: "dhis2/core:2.36.0-tomcat-8.5.34-jre8-alpine"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 300
            httpGet:
              path: /
              port: http
          readinessProbe:
            initialDelaySeconds: 300
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: dhis-conf-rw
              mountPath: /DHIS2_home
              readOnly: false
            - name: server-xml-rw
              mountPath: /usr/local/tomcat/conf/server.xml
              subPath: server.xml
          resources:
            {}
      volumes:

        - name: dhis-conf-rw
          emptyDir: {}
        - name: dhis-conf-ro
          configMap:
            name: release-name-core
            items:
              - key: dhis.conf
                path: dhis.conf

        - name: dhis-google-auth-json-ro
          configMap:
            name: release-name-core
            items:
              - key: dhis-google-auth.json
                path: dhis-google-auth.json

        - name: server-xml-rw
          emptyDir: {}
        - name: server-xml-ro
          configMap:
            name: release-name-core
            items:
              - key: server.xml
                path: server.xml
---
# Source: core/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-core
  labels:
    helm.sh/chart: core-0.10.0
    app.kubernetes.io/name: core
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  rules:
    - host: "dhis2-core.127.0.0.1.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-core
                port:
                  number: 8080
---
# Source: core/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-core-test-connection"
  labels:
    helm.sh/chart: core-0.10.0
    app.kubernetes.io/name: core
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-core:8080']
  restartPolicy: Never
